<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/back_desc"
            android:padding="10dp"
            android:src="@drawable/ic_back1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#5451F2" />

        <TextView
            android:id="@+id/textDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/back" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/ic_back"
            android:contentDescription="@string/menu_desc"
            android:padding="10dp"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#5451F2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnbooking"
        app:layout_constraintTop_toBottomOf="@id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_pic"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedCorner24" />

            <ImageView
                android:id="@+id/img_heart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/ic_back"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/ic_tim"
                app:layout_constraintEnd_toEndOf="@id/img"
                app:layout_constraintTop_toTopOf="@id/img" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWifi"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/green"
                android:text="@string/free_wifi"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_wifi_24"
                app:iconTint="#5451F2"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBreakfast"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/green"
                android:text="@string/free_breakfast"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_breakfast"
                app:iconTint="#5451F2"
                app:layout_constraintStart_toEndOf="@id/btnWifi"
                app:layout_constraintTop_toTopOf="@id/btnWifi" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRating"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/green"
                android:text="@string/rating_5_0"
                android:textColor="@color/black"
                app:cornerRadius="12dp"
                app:icon="@drawable/ic_star_24"
                app:iconTint="#FFCC00"
                app:layout_constraintStart_toEndOf="@id/btnBreakfast"
                app:layout_constraintTop_toTopOf="@id/btnWifi" />

            <TextView
                android:id="@+id/textHotelName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/the_aston_vill_hotel"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/textPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnWifi" />

            <TextView
                android:id="@+id/textPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_night"
                android:textColor="#5451F2"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/textHotelName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/textHotelName" />

            <ImageView
                android:id="@+id/ic_loc"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textHotelName"
                app:tint="#888888" />

            <TextView
                android:id="@+id/textLoc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/location_text"
                android:textColor="#888888"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/ic_loc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_loc"
                app:layout_constraintTop_toTopOf="@id/ic_loc" />

            <TextView
                android:id="@+id/labelDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLoc" />

            <TextView
                android:id="@+id/textContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/text_description"
                android:textColor="#666666"
                app:layout_constraintTop_toBottomOf="@id/labelDesc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnbooking"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:backgroundTint="#5451F2"
        android:text="@string/booking_now"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>